<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="hello">Hello World, ProjectMapActivity!</string>
    <string name="app_name">locus</string>
    <string name="saveButton">Save</string>
    <string name="userLabel">User</string>
    <string name="serverLabel">Server URL</string>
    <string name="ongoingNotification">locus</string>
    <string name="mapButton">Show Map</string>
    <string name="serviceLabel">Service:</string>
    <string name="mapLabel">Map:</string>
    <string name="updateTickLabel">Update Tick [s]</string>
    <string name="startTracking">Start Tracking</string>
    <string name="stopTracking">Stop Tracking</string>
    <string name="tagLocation">Tag Location</string>
    <string name="settings">Settings</string>
    <string name="setup">Welcome to locus! Before we start, please set the server URL and choose a user name via Menu >> Settings.</string>
    <string name="tag">Tag</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
</resources>
