<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/serverLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serverLabel" />

    <EditText
        android:id="@+id/serverText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/userLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userLabel" />

    <EditText
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveButton" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serviceLabel" />

    <ToggleButton
        android:id="@+id/serviceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButton" />

    <TextView
        android:id="@+id/mapLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapLabel" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mapButton" />

    <TextView
        android:id="@+id/debugLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>